apeda functionality with price payn

--- a/apeda.html
+++ b/apeda.html
@@ -458,7 +458,7 @@
          </div>
          <p class="p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla nibh porta, hendrerit sapien ut, pellentesque diam. Morbi volutpat venenatis est sed iaculis. In hac habitasse platea dictumst. Morbi eget ex neque. Pellentesque quis felis nec leo tristique ornare ut a dui. Nam euismod eget mauris non vehicula. Ut convallis urna a quam tincidunt interdum.</p>
 
-         <div class="text-center pb-5"><button class="btn1 basic-btn" data-payment_id="1"><a href="gst-price_form.html">Select Plan</a></button></div>
+         <div class="text-center pb-5"><button class="btn1 basic-btn" data-payment_id="1"><a href="apeda_fees.html?plan=1">Select Plan</a></button></div>
        </div>
      </div>
 
@@ -475,7 +475,7 @@
          </div>
          <p class="p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla nibh porta, hendrerit sapien ut, pellentesque diam. Morbi volutpat venenatis est sed iaculis. In hac habitasse platea dictumst. Morbi eget ex neque. Pellentesque quis felis nec leo tristique ornare ut a dui. Nam euismod eget mauris non vehicula. Ut convallis urna a quam tincidunt interdum.</p>
 
-         <div class="text-center pb-5"><button class="btn1  preum-btn" data-payment_id="1"><a href="gst-price_form.html">Select Plan</a></button></div>
+         <div class="text-center pb-5"><button class="btn1  preum-btn" data-payment_id="1"><a href="apeda_fees.html?plan=2">Select Plan</a></button></div>
        </div>
      </div>
 
@@ -492,7 +492,7 @@
          </div>
          <p class="p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla nibh porta, hendrerit sapien ut, pellentesque diam. Morbi volutpat venenatis est sed iaculis. In hac habitasse platea dictumst. Morbi eget ex neque. Pellentesque quis felis nec leo tristique ornare ut a dui. Nam euismod eget mauris non vehicula. Ut convallis urna a quam tincidunt interdum.</p>
 
-         <div class="text-center pb-5"><button class="btn1 stndr-btn" data-payment_id="1"><a href="gst-price_form.html">Select Plan</a></button></div>
+         <div class="text-center pb-5"><button class="btn1 stndr-btn" data-payment_id="1"><a href="apeda_fees.html?plan=3">Select Plan</a></button></div>
        </div>
      </div>
   </div>
