trademark plan form

--- a/td-mark.html
+++ b/td-mark.html
@@ -660,7 +660,7 @@
     </div>
     <h6>All Inclusive price</h6>
     <p>Trademark filing under one class for proprietorship and small enterprises.Inclusive of government fee and taxes.</p>
-      <div class="text-center"><button class="btn1" data-payment_id="1"><a href="gst-price_form.html">Buy Now</a></button></div>
+      <div class="text-center"><button class="btn1" data-payment_id="1"><a href="trademark_fees.html?plan=1">Buy Now</a></button></div>
     </div>
   </div>
   </div>
@@ -676,7 +676,7 @@
     </div>
     <h6>All Inclusive price</h6>
     <p>Trademark filing under one class for proprietorship and small enterprises.Inclusive of government fee and taxes.</p>
-      <div class="text-center"><button class="btn1" data-payment_id="1"><a href="gst-price_form.html">Buy Now</a></button></div>
+      <div class="text-center"><button class="btn1" data-payment_id="1"><a href="trademark_fees.html?plan=2">Buy Now</a></button></div>
     </div>
   </div>
   </div>
@@ -692,7 +692,7 @@
     </div>
     <h6>All Inclusive price</h6>
     <p>Trademark filing under one class for proprietorship and small enterprises.Inclusive of government fee and taxes.</p>
-      <div class="text-center"><button class="btn1" data-payment_id="1"><a href="gst-price_form.html">Buy Now</a></button></div>
+      <div class="text-center"><button class="btn1" data-payment_id="1"><a href="trademark_fees.html?plan=3">Buy Now</a></button></div>
     </div>
   </div>
   </div>
@@ -709,7 +709,7 @@
     </div>
     <h6>All Inclusive price</h6>
     <p>Trademark filing under one class for proprietorship and small enterprises.Inclusive of government fee and taxes.</p>
-      <div class="text-center"><button class="btn1" data-payment_id="1"><a href="gst-price_form.html">Buy Now</a></button></div>
+      <div class="text-center"><button class="btn1" data-payment_id="1"><a href="trademark_fees.html?plan=4">Buy Now</a></button></div>
     </div>
   </div>
   </div>
