--- a/td-mark.html
+++ b/td-mark.html
@@ -314,11 +314,13 @@
           <h2>Procedure For Trademark Registration</h2>
         </div>
         <div class="procedure-td-mark_list-wrapper">
+
+
           <ul>
               <li>
                 <div class="procedure-td-mark_list-1">
                   <div class="procedure-td-mark_img-holder">
-                    <img src="images/color-img.jpg">
+                    <h6>1</h6>
                   </div>
                   <div class="procedure-titel">
                   <h3>Complete our trademark Form</h3>
@@ -331,7 +333,7 @@
           <li>
             <div class="procedure-td-mark_list-1">
             <div class="procedure-td-mark_img-holder">
-              <img src="images/color-img.jpg">
+              <h6>2</h6>
             </div>
             <div class="procedure-titel">
             <h3>Complete our trademark Form</h3>
@@ -344,7 +346,7 @@
           <li>
             <div class="procedure-td-mark_list-1">
             <div class="procedure-td-mark_img-holder">
-              <img src="images/color-img.jpg">
+              <h6>3</h6>
             </div>
             <div class="procedure-titel">
             <h3>Complete our trademark Form</h3>
@@ -357,7 +359,7 @@
           <li>
             <div class="procedure-td-mark_list-1">
             <div class="procedure-td-mark_img-holder">
-              <img src="images/color-img.jpg">
+              <h6>4</h6>
             </div>
             <div class="procedure-titel">
             <h3>Complete our trademark Form</h3>
@@ -370,7 +372,7 @@
            <li>
             <div class="procedure-td-mark_list-1">
             <div class="procedure-td-mark_img-holder">
-              <img src="images/color-img.jpg">
+              <h6>5</h6>
             </div>
             <div class="procedure-titel">
             <h3>Complete our trademark Form</h3>
@@ -380,6 +382,13 @@
           </div>
         </li>
           </ul>
+
+
+
+
+
+
+
          
       </div>
     </div>
@@ -399,34 +408,56 @@
       </div>
     </div>
   </div>
+
+
+
+  
   <div class="container">
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+
         <div class="benefit-td-mark_list-1">
+          <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div>
             <h3>Guards the Commercial Goodwill</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum </p>
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
         <div class="benefit-td-mark_list-1">
+          <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div>
             <h3>Advertises Goods and Services</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum </p>
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
         <div class="benefit-td-mark_list-1">
+          <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div>
             <h3>Legal Protection</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum </p>
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
         <div class="benefit-td-mark_list-1">
+          <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div>
             <h3>Creation of an Asset</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum </p>
         </div>
       </div>
     </div>
   </div>
+
+
+
+
+
 </section>
 <!-- ---Register Trademark Online ------->
 <section class="reg-td-mark_outter">
