--- a/apeda.html
+++ b/apeda.html
@@ -222,10 +222,171 @@
   </div>
 </section>
 
-
 <!-- apeda-scheduled -->
 
 <section class="apeda-scheduled_outter">
+   <div class="container">
+    <div class="row">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-md-12 col-sm-12 col-12">
+        <div class="benifits-why_legalution pt-0">
+           <h2 class="text-center">SCEDULED</h2>
+           <h6 class="text-center">(catagory of products)</h6>
+        </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/111.jpg" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+<!-- apeda-scheduled old-->
+
+<!-- <section class="apeda-scheduled_outter">
    <div class="container">
     <div class="row">
       <div class="col-xl-12 col-lg-12 col-md-12 col-md-12 col-sm-12 col-12">
@@ -357,7 +518,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- document-required -->
 <section class="exp-td-mark-class_outter">
@@ -367,15 +528,145 @@
         <div class="exp-td-mark-class_head">
           <h2 class="text-center">Document Required</h2>
         </div>
-        <div class="col-xl-12 col-lg-12 col-md 12 col-sm-12 col-12">
-          <img src="images/6steps_concom.jpg" class="img-fluid py-4">
       </div>
-    </div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+        <div class="benefit-td-mark_list-1">
+          <!-- <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div> -->
+            <h3 class="text-white">International Credibility</h3>
+            <p class="text-white">This standard is recognized internationally,
+                which would ultimately help your business
+                establish oversees business.</p>
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+        <div class="benefit-td-mark_list-1">
+          <!-- <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div> -->
+            <h3 class="text-white">Marketability</h3>
+            <p class="text-white">ISO helps in developing the business marketing directly as it improves the credibility of the business.</p>
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+        <div class="benefit-td-mark_list-1">
+          <!-- <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div> -->
+            <h3 class="text-white">Government Tenders</h3>
+            <p class="text-white">ISO certificate gives your business an advantage, when there is any government tender released. </p>
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+        <div class="benefit-td-mark_list-1">
+          <!-- <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div> -->
+            <h3 class="text-white">Business Efficiency</h3>
+            <p class="text-white">Any business can achieve functional
+              efficiency in their methods of working.
+              The ISO certification agency will help
+              your develop your SOP (Standard Operating
+              Procedure) and work instructions, which will
+              ultimately benefitt the business. </p>
+        </div>
+      </div>
+
+      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+        <div class="benefit-td-mark_list-1">
+          <!-- <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div> -->
+            <h3 class="text-white">Product Quality</h3>
+            <p class="text-white">In case a business obtain ISO certificate,
+                then this would imply a product is of
+                international standards. And hence, this
+                would mean less chances of rejection that
+                could’ve occurred due to flawed products. </p>
+        </div>
+      </div>
+
+      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+        <div class="benefit-td-mark_list-1">
+          <!-- <div class="benefit-td-mark_list-img">
+            <img src="images/our_advantage.jpg" class="img-fluid">
+          </div> -->
+            <h3 class="text-white">Customer Satisfaction</h3>
+            <p class="text-white">These standards help the business in achieving efficiency
+                in their ways and methods of production. And this would
+                ultimately result in better service to the customers. </p>
+        </div>
+      </div>
+
+
+
+
+
+        <!-- <div class="col-xl-12 col-lg-12 col-md 12 col-sm-12 col-12">
+          <img src="images/6steps_concom.jpg" class="img-fluid py-4">
+      </div> -->
   </div>
 </section>
 
 <!-- reg-process-apeda -->
 <section class="apeda-reg-process_outter">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <div class="fssai_process-text-head">
+          <h1>Registration process For APEDA</h1>
+        </div>
+      </div>
+      </div>
+      </div>
+      <div class="container">
+        <div class="row">
+      <div class="apeda-reg-process">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+          <div class="apeda-reg-process_1 apeda-catagory">
+             <div class="apeda-reg-process_box">
+            <img src="images/apeda-1.jpg" >
+          </div>
+          <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+          </div>
+          <div class="apeda-reg-process_1 apeda-catagory">
+             <div class="apeda-reg-process_box">
+            <img src="images/apeda-2.jpg" >
+          </div>
+          <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+          </div>
+        </div>
+
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+          <div class="apeda-reg-process_2">
+             <div class=" box_2">
+            <img src="images/apeda-mob.jpg">
+          </div>
+        </div>
+        </div>
+
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+          <div class="apeda-reg-process_3 apeda-catagory">
+            <div class="apeda-reg-process_box">
+            <img src="images/apeda-3.jpg" >
+          </div>
+          <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+          </div>
+          <div class="apeda-reg-process_3 apeda-catagory">
+            <div class="apeda-reg-process_box">
+            <img src="images/apeda-4.jpg" >
+          </div>
+          <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- reg-process-apeda old -->
+<!-- <section class="apeda-reg-process_outter">
   <div class="container">
     <div class="row">
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
@@ -424,12 +715,7 @@
       </div>
     </div>
   </div>
-
-
-      <!-- <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <img src="images/rg-process.png" class="img-fluid pt-5">
-      </div> -->
-</section>
+</section> -->
 
 <!-- apeda-price -->
 <section class="fees-apeda_outter">
