--- a/fssai.html
+++ b/fssai.html
@@ -441,8 +441,21 @@
         </div>
         <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12">
           <div class="fssai_img">
-            <img src="images/fssai-img.jpg" class="img-fluid">
-            <img src="images/fssai-img.jpg" class="img-fluid">
+            <div class="ice-whn-code">
+              <h2>How to use FSSAI License number on food product?</h2>
+              <p class="text-left">If you are selling food product in the market, you must display
+              FSSAI number on your product package in addition to ingredients
+              and flavour used into the product</p>
+              <img src="images/cam.png" class="img-fluid">
+              <!-- <img src="images/barcode.png" class="img-fluid mx-auto"> -->
+            </div>
+
+
+
+            <div class="ice-whn-code">
+              <h2>FSSAI Certificate Sample</h2>
+              <img src="images/FSSAI certificate Sample.jpg" class="img-fluid pt-4">
+            </div>
           </div>
         </div>
       </div>
