--- a/iec.html
+++ b/iec.html
@@ -383,7 +383,7 @@
               </div>
             <div class="ice-whn-code">
               <h2>FSSAI Certificate Sample</h2>
-              <img src="images/iec-certificate_img.jpg" class="img-fluid">
+              <img src="images/iec_certificate.jpg" class="img-fluid pt-4">
             </div>
             
           
@@ -398,15 +398,15 @@
 <section class="fssai-process_outter">
   <div class="container">
     <div class="row">
-      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <div class="fssai_process-text-head">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 pb-4">
+        <div class="fssai_process-text-head ice_process-text-head">
           <h1>Our Process</h1>
         </div>
       </div>
       <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 pt-4">
         <div class="iec-process-1">
           <div class="exp-td-mark-class_list-box iso-rg-pkg iec-img-box">
-            <img src="" class="img-fluid">
+            <img src="images/P1.png" class="img-fluid">
            </div>
            <div class="benefit-td-mark_list-1">
             <h3>Compelete fill the form </h3>
@@ -418,7 +418,7 @@
       <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 pt-4">
         <div class="iec-process-1">
           <div class="exp-td-mark-class_list-box iso-rg-pkg iec-img-box">
-            <img src="" class="img-fluid">
+            <img src="images/P2.png" class="img-fluid">
            </div>
            <div class="benefit-td-mark_list-1">
             <h3>IEC Application creation</h3>
@@ -430,7 +430,7 @@
       <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 pt-4">
         <div class="iec-process-1">
           <div class="exp-td-mark-class_list-box iso-rg-pkg iec-img-box">
-            <img src="" class="img-fluid">
+            <img src="images/P3.png" class="img-fluid">
            </div>
            <div class="benefit-td-mark_list-1">
             <h3>IEC free payment</h3>
@@ -442,7 +442,7 @@
       <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 pt-4">
         <div class="iec-process-1">
           <div class="exp-td-mark-class_list-box iso-rg-pkg iec-img-box">
-            <img src="" class="img-fluid">
+            <img src="images/p4.png" class="img-fluid">
            </div>
            <div class="benefit-td-mark_list-1">
             <h3>IEC License send by email</h3>
@@ -460,7 +460,7 @@
       <div class="col-xl-12 col-lg-12 col-md-12 col-md-12 col-sm-12 col-12">
         <div class="exp-td-mark-class_head fssai-pb-none iec-req-p">
            <h2 class="text-center">Documents required for IEC Code</h2>
-           <p class="text-center text-white">Different documents are required by different entities to get IEC code and these are given below</p>
+           <p class="text-center text-white" style="font-size: 17px;"><b>Different documents are required by different entities to get IEC code and these are given below</b></p>
         </div>
       </div>
     </div>
